<resources>
    <string name="app_name">Android_lab6_1</string>
    <string name="tickets">Tickets</string>
    <string name="admin">Admin</string>
    <string name="bus">Bus</string>
    <string name="statistics">Statistics</string>
    <string name="passenger">Passenger</string>
    <string name="schedule">Schedule</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="test_company">Test Company</string>
    <string name="aty_zhoni">Aty Zhoni</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Сегодня</string>
</resources>